# symphony-tasks

./: .gitignore  AGENTS.md  Cargo.toml  README.md
config/: orchestrator.smoke.toml  orchestrator.toml
config/repositories/: example-gitcode.toml  example-github.toml  example.toml  game-design-patterns.toml
config/repositories-smoke/: example.toml
docs/operations/: smoke-checklist.md  systemd.md
docs/plans/: 2026-03-10-independent-orchestrator-design.md  2026-03-10-independent-orchestrator-implementation-plan.md  2026-03-11-github-merge-closeout-design.md  2026-03-11-github-merge-closeout-plan.md  2026-03-11-github-tracker-design.md  2026-03-11-github-tracker-implementation-plan.md  2026-03-11-production-reliability-design.md  2026-03-11-production-reliability-implementation-plan.md
src/: lib.rs  main.rs
src/agent_runner/: mod.rs  process.rs  types.rs
src/app/: config.rs  lock.rs  mod.rs
src/cli/: args.rs
src/logging/: mod.rs
src/models/: issue.rs  mod.rs  pr.rs  repository.rs  run_record.rs  workflow.rs
src/orchestrator/: mod.rs  reconcile.rs  retry.rs
src/registry/: load.rs
src/state_store/: files.rs  layout.rs  mod.rs
src/tracker/: mod.rs  types.rs
src/workflow/: parser.rs
tests/: app_runtime.rs  cli_smoke.rs  e2e_fixture.rs  gitcode_client.rs  github_client.rs  github_mapping.rs  models_roundtrip.rs  orchestrator_selection.rs  pr_reconcile.rs  reconcile_dispatch.rs  registry_loading.rs  restart_recovery.rs  runner_process.rs  state_store.rs  tracker_mapping.rs  validate_config.rs  workflow_parser.rs  workspace_manager.rs
(+7 files in other folders)
